add image field to Photo
